# robotrepo

./: .gitignore  INSTALL  README.md  depends.sh  install.sh  joystick_readme.md
Camera/: README.md  install
Camera/src/driver/: .gitignore
Camera/src/driver/launch/: ladybug_format7_mode0_colour.launch  ladybug_format7_mode7.launch  ladybug_format7_mode7_colour.launch
Camera/src/ladybug3_ros/launch/: ladybug_format7_mode7.launch
Catkin_WS/devel/: .catkin  .rosinstall  setup.sh
Catkin_WS/devel/lib/gps_common/: wamv_odometry
Catkin_WS/src/StatusLight/: .StatusLight.ino.swp  StatusLight.ino
Catkin_WS/src/WaypointFollower/: CMakeLists.txt  package.xml
Catkin_WS/src/WaypointFollower/include/: controller.h  waypointfollower.h
Catkin_WS/src/WaypointFollower/src/: controller.cpp  waypointfollower.cpp
Catkin_WS/src/camera1394/: CMakeLists.txt
Catkin_WS/src/gps_common/: CMakeLists.txt
Catkin_WS/src/heartbeat/: CMakeLists.txt  package.xml
Catkin_WS/src/heartbeat/nodes/: signal.cpp
Catkin_WS/src/ladybug3_ros/: CMakeLists.txt
Catkin_WS/src/left_motor_control/: package.xml
Catkin_WS/src/lidar_transform/: multi_lidar_calib_class.cpp
Catkin_WS/src/multi_lidar_loam_calibration/: multi_lidar_calib_class.cpp
Catkin_WS/src/right_motor_control/: CMakeLists.txt  right_motor_controller.py
Catkin_WS/src/teleop_controller/: CMakeLists.txt  package.xml
Catkin_WS/src/teleop_controller/src/nodes/: teleop_controller.py
Catkin_WS/src/wamv_autonomy/: CMakeLists.txt
Catkin_WS/src/wamv_autonomy/nodes/: straightLine.cpp
Catkin_WS/src/wamv_bringup/: CMakeLists.txt  package.xml
Catkin_WS/src/wamv_bringup/launch/: bringup_puget.launch  launch_drivers.launch
Catkin_WS/src/wamv_bringup/src/: frames.cpp  sync_gps_vel.cpp
EmergencyStop/: v2_boat_kill_switch.ino  v2_remote_kill_switch.ino
MotorController/: joyStick_setup.sh  speedMap.cpp
MotorController/motorControl/: motorControl.ino  newMotorControl.ino
MotorController/motorTest/: motorTest.ino
MotorController/right_motor_control/: package.xml
Record_GPS_msg_src/: CMakeLists.txt  package.xml
Record_GPS_msg_src/output_Visualize/: imu.txt  navsatfix.txt  navsatfix.txt~  readme.txt  twist.txt
Record_GPS_msg_src/output_Visualize/gmplot/: plot_latlong.py  test_at_locker_map.html
Record_GPS_msg_src/src/: subscriber.cpp
RobotX_WS/: install
RobotX_WS/devel/: .catkin  .rosinstall  setup.sh
RobotX_WS/src/driver_base/: CMakeLists.txt
RobotX_WS/src/gps_common/: package.xml
RobotX_WS/src/gps_common/launch/: gpsodom.launch
RobotX_WS/src/heartbeat/: CMakeLists.txt
RobotX_WS/src/kingfisher_description/: package.xml
RobotX_WS/src/misc tools/: extract_images.launch
RobotX_WS/src/robotx_gazebo/: package.xml
RobotX_WS/src/wamv_autonomy/: CMakeLists.txt  package.xml
RobotX_WS/src/wamv_bringup/: package.xml
RobotX_WS/src/wamv_description/: package.xml
RobotX_WS/src/waypoint_follower/: CMakeLists.txt
RobotX_WS/src/waypoint_follower/include/: controller.h  waypoint_follower.h
RobotX_WS/src/waypoint_follower/msg/: PID_msg.msg  TuningParameters.msg
RobotX_WS/src/waypoint_follower/src/: waypoint_follower.cpp
RobotX_WS/src/waypoint_follower_ros/: CMakeLists.txt
RobotX_WS/src/waypoint_follower_ros/include/: controller.h  waypoint_follower.h
RobotX_WS/src/waypoint_follower_ros/msg/: PID.msg  PIDS.msg  TuningParameters.msg
RobotX_WS/src/waypoint_follower_ros/src/: better.cpp  controller.cpp  waypoint_follower.cpp
SetupScripts/: freshStart.sh
StatusLight/: status_light.ino
Velodyne/: README.md  build.sh
Velodyne/devel/: .catkin  .rosinstall  setup.sh
Velodyne/src/drivers/: CMakeLists.txt  package.xml
Velodyne/src/drivers/launch/: HDL32_points.launch
WaypointFollower/EECS550/: mb_controller.c  mb_controller.h  mb_defs.h  mb_motors.c  mb_odometry.c  mb_pid.c  mb_pid.h  mb_structs.h
calibration/calibration results/: cam0_parameter  cam1_parameter  cam2_parameter  cam3_parameter  cam4_parameter  cam5_parameter  distortion parameters  ptgrey_file_for_cam4  vel1_to_cam0  vel1_to_cam1  vel1_to_cam4  vel2_to_cam2  vel2_to_cam3
calibration/ladybug_cam_parameters/: K_cam0.csv  K_cam1.csv  K_cam2.csv  K_cam3.csv  K_cam4.csv  K_cam5.csv
catkin_ws/: INSTALL
catkin_ws/src/gps_common/: CMakeLists.txt
catkin_ws/src/lidar_transform/: multi_lidar_calib_class.cpp
catkin_ws/src/robotx_gazebo/: CMakeLists.txt
catkin_ws/src/sensor_fusion/: CMakeLists.txt  package.xml
catkin_ws/src/sensor_fusion/nodes/: navsatToOdom.cpp
catkin_ws/src/wamv_autonomy/: CMakeLists.txt  package.xml
catkin_ws/src/wamv_autonomy/include/: PID.h
catkin_ws/src/wamv_autonomy/nodes/: sim.cpp  straightLine.cpp
catkin_ws/src/wamv_bringup/: CMakeLists.txt  package.xml
detection/: CMakeLists.txt
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: advanced_navigation_driver.pc  aruco.pc  aruco_msgs.pc  driver_base.pc  velodyne_msgs.pc
heartBeat/: README.md  build.sh  install
heartBeat/src/heartbeat/: CMakeLists.txt  package.xml
heartBeat/src/heartbeat/msg/: beat.msg  heartBeat.msg
heartBeat/src/heartbeat/nodes/: signal.cpp
ladybug3_ros/src/nodes/: format7ladybug.cpp
obj_detect/darknet_ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
occupancy_grid/: CMakeLists.txt  package.xml
occupancy_grid/src/: occupancy_grid.cpp
src/advanced_navigation_driver/src/: an_driver.cpp
wamv_base/: README.md  install
wamv_calibration/: README.md  install
wamv_drivers/: install
wamv_localization/: README.md  install
wamv_localization/src/wamv_autonomy/: README.md
wamv_misc/: README.md  plot.py
wamv_setup/: README.md
wamv_simulation/: README.md  install
wamv_ws/src/gps_common/: CMakeLists.txt
wamv_ws/src/wamv_bringup/: CMakeLists.txt
working backup/calibration/calibration results/: cam4_parameter  vel1_to_cam4
yolo/YOLO-Annotation-Tool/: 001_list.txt  002_list.txt  003_list.txt  004_list.txt  black_test.txt  black_train.txt  convert.py  green_test.txt  green_train.txt  main-Images-001to004.py  orange_test.txt  orange_train.txt  process.py  white_test.txt  white_train.txt
(+518 files in other folders)
