<?xml version="1.0"?>
<package>
  <name>heartbeat</name>
  <version>1.0.0</version>
  <description>Robot HeartBeat Package</description>
  <maintainer email="dhanjalsahib@gmail.com">Sahib Dhanjal</maintainer>
  
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
