<?xml version="1.0"?>
<package format="2">
  <name>drivers</name>
  <version>0.0.0</version>
  <description>Launch File Configurable for Velodyne</description>
  <maintainer email="dhanjalsahib@gmail.com">Sahib Dhanjal</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
