<?xml version="1.0"?>
<package format="2">
  <name>fusion</name>
  <version>0.0.0</version>
  <description>The sensor_fusion package</description>
  <maintainer email="dhanjalsahib@gmail.com">Sahib Dhanjal</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>gps_common</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

</package>
