<?xml version="1.0"?>
<package format="2">
  <name>wamv_autonomy</name>
  <version>0.0.0</version>
  <description>Autonomy Task Packages</description>
  <maintainer email="dhanjalsahib@gmail.com">Sahib Dhanjal</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
